cambios en el footer

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                     </a>
                 </li>
             </ul>
+            <a href="#">
+              <img src="./img/logo.png" alt="Hotel Los Chañarcitos" height="50px">
+            </a>
             <ul class="d-flex flex-column justify-content-center">
                 <li>
                     <i class="bi bi-telephone-fill"></i>
